[tool.poetry]
name = "api-da-sophi"
version = "0.1.0"
description = ""
authors = ["Joao Pedro Watson <joaopedrowatson@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
tinydb = "^4.7.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
httpie = "^3.1.0"
blue = "^0.8.0"
isort = "^5.10.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
